plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.toVersion(22)
    targetCompatibility = JavaVersion.toVersion(22)
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.formdev:flatlaf:3.4.1' 
}

application {
    mainClassName = 'com.lnedimovic.table_editor.Main'
}


sourceCompatibility = '1.8'
targetCompatibility = '1.8'